# openwrt-thunder

./: .gitignore  Cargo.toml  README.md  build.sh  build_docker.sh  check_update.sh  docker_build.sh  unpack.sh
.github/: build.sh  build_docker.sh
.github/workflows/: CI.yml  Docker.yml  Release.yml  Update.yml  test.yml
docker/: Dockerfile  run.sh  run_script.sh
examples/: login.rs  rsa.rs
libc/aarch64/: libgcc_s.so.1  libstdc++.so.6
openwrt/luci-app-xunlei/: Makefile
openwrt/luci-app-xunlei/luasrc/model/cbi/: xunlei.lua
openwrt/luci-app-xunlei/luasrc/model/cbi/xunlei/: client.lua
openwrt/luci-app-xunlei/po/zh-cn/: xunlei.po
openwrt/xunlei/: Makefile
openwrt/xunlei/files/: xunlei.config  xunlei.init
src/: constant.rs  daemon.rs  env.rs  homedir.rs  install.rs  launch.rs  launcher.rs  libc_asset.rs  main.rs  standard.rs  systemd.rs  util.rs  xunlei_asset.rs
src/asset/: libc.rs  mod.rs  thunder.rs  xunlei.rs
src/libc/x86_64/: ld-linux-x86-64.so.2  libdl.so.2  libgcc_s.so.1  libm.so.6  libpthread.so.0  libstdc++.so.6
src/serve/: backend.rs  error.rs  ext.rs  frontend.rs  mod.rs
src/serve/auth/: mod.rs  murmur.rs  token.rs
src/static/: login.html
