[package]
name = "xunlei"
version = "3.11.2-32"
edition = "2021"
description = "Synology Nas Thunder runs on Linux"
license = "MIT"
homepage = "https://github.com/gngpp/xunlei"
repository = "https://github.com/gngpp/xunlei.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.30"
anyhow = "1.0.75"
rust-embed = "8.0.0"
nix = { version = "0.26.2", features = ["mount", "signal", "user"]}
rand = "0.8.5"
ureq = "2.7.1"
sha3 = "0.10.8"
indicatif = "0.17.6"
rouille= "3.6.2"
signal-hook = "0.3.17"
clap = { version = "4.4.2", features = ["derive", "env"] }
tar = "0.4.40"
libflate = "2.0.0"
core2 = "0.4.0"
xz= "0.1.0"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_env = "musl"))'.dependencies]
tikv-jemallocator = "0.5.4"

[features]
default = ["launcher", "daemon"]
embed = ["launcher", "daemon"]
launcher = []
daemon = []

[[bin]]
name = "xunlei"
path = "src/main.rs"

[profile.dev]
opt-level = 'z'

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "gngpp <gngppz@gmail.com>"
copyright = "2023, gngpp <gngppz@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Synology Nas Thunder runs on Linux"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/xunlei", "usr/bin/xunlei", "755"],
    ["README.md", "usr/share/doc/xunlei/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/xunlei", dest = "/usr/bin/xunlei", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/xunlei/LICENSE", doc = true, mode = "0644" }
]