[package]
name = "thunder"
version = "1.0.2"
edition = "2021"
description = "Synology NAS thunder run on Linux"
license = "MIT"
homepage = "https://github.com/gngpp/thunder"
repository = "https://github.com/gngpp/thunder.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
rust-embed = "8.0.0"
nix = { version = "0.26.2", features = ["mount", "signal", "user"]}
rand = "0.8.5"
ureq = "2.7.1"
indicatif = "0.17.6"
signal-hook = "0.3.17"
clap = { version = "4.4.2", features = ["derive", "env"] }
tar = "0.4.40"
libflate = "2.0.0"
core2 = "0.4.0"
xz= "0.1.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["fs", "process", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["http2"]}
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tokio-util = "0.7.10"
jsonwebtokens = "1.2.0"
mimalloc = { version = "0.1.39", default-features = false, optional = true }
daemonize = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.4", default-features = false, features = ["trace"]}

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "thunder"
path = "src/main.rs"

[profile.dev]
opt-level = 'z'

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "gngpp <gngppz@gmail.com>"
copyright = "2023, gngpp <gngppz@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Synology NAS thunder run on Linux"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/thunder", "usr/bin/thunder", "755"],
    ["README.md", "usr/share/doc/thunder/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/thunder", dest = "/usr/bin/thunder", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/thunder/LICENSE", doc = true, mode = "0644" }
]
